<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".Friends.FriendsActivity">

    <TextView
        android:id="@+id/friendsTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/friends_title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/friendsSettingImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/black"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

    <ImageButton
        android:id="@+id/friendsAddImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/black"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/friendsSearchImageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_add_black_24dp" />

    <ImageButton
        android:id="@+id/friendsSearchImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/black"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/friendsSettingImageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search_black_24dp" />

    <ImageView
        android:id="@+id/friendsMyProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsTitleText"
        app:srcCompat="@drawable/ic_person_outline_black_24dp" />

    <TextView
        android:id="@+id/friendsMyProfileNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/friends_my_profile_default_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/friendsMyProfileImage"
        app:layout_constraintTop_toTopOf="@+id/friendsMyProfileImage" />

    <TextView
        android:id="@+id/friendsMyProfileStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/friends_my_profile_default_status"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/friendsMyProfileImage"
        app:layout_constraintStart_toEndOf="@+id/friendsMyProfileImage" />

    <View
        android:id="@+id/friendsDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsMyProfileImage" />

    <TextView
        android:id="@+id/friendsGroupTitleFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/friends_group_title_friends"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendsProfileListRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsDivider">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageButton
        android:id="@+id/friendsMyProfileEditImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/black"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friendsMyProfileImage"
        app:srcCompat="@drawable/ic_edit_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>